@@ -1,7 +1,13 @@
 package pl.szczesniak.dominik.whattowatch.movies.domain;
 
+import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieComment;
+import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieCommentQueryResult;
 import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieId;
+import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieInListQueryResult;
+import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieQueryResult;
 import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieTagId;
+import pl.szczesniak.dominik.whattowatch.movies.domain.model.MovieTagQueryResult;
+import pl.szczesniak.dominik.whattowatch.movies.infrastructure.query.MoviesQueryService;
 import pl.szczesniak.dominik.whattowatch.users.domain.model.UserId;
 
 import java.lang.reflect.Field;
@@ -9,11 +15,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
-public class InMemoryMoviesRepository implements MoviesRepository, TagsQuery {
+public class InMemoryMoviesRepository implements MoviesRepository, TagsQuery, MoviesQueryService {
 
 	private final AtomicInteger nextId = new AtomicInteger(0);
 	private final Map<MovieId, Movie> movies = new HashMap<>();
@@ -44,13 +51,6 @@ public class InMemoryMoviesRepository implements MoviesRepository, TagsQuery {
 	}
 
 	@Override
-	public List<Movie> findAll(final UserId userId) {
-		return movies.values().stream()
-				.filter(movie -> movie.getUserId().equals(userId))
-				.collect(Collectors.toList());
-	}
-
-	@Override
 	public void removeMovie(final MovieId movieId, final UserId userId) {
 		if (movieBelongsToUser(movieId, userId)) {
 			movies.remove(movieId);
@@ -71,26 +71,102 @@ public class InMemoryMoviesRepository implements MoviesRepository, TagsQuery {
 	}
 
 	@Override
-	public List<Movie> findAllMoviesByTagIds(final List<MovieTagId> tags, final UserId userId) {
+	public Optional<MovieTag> findTagByTagId(final String tagId) {
+		return Optional.ofNullable(tags.get(new MovieTagId(UUID.fromString(tagId))));
+	}
+
+	@Override
+	public List<MovieInListQueryResult> getMoviesToWatch(final UserId userId) {
+		final List<Movie> foundMovies = movies.values().stream()
+				.filter(movie -> movie.getUserId().equals(userId))
+				.toList();
+		return toDto(foundMovies);
+	}
+
+	private static List<MovieInListQueryResult> toDto(final List<Movie> foundMovies) {
+		return foundMovies.stream().map(movie -> new MovieInListQueryResult(
+								movie.getMovieId(),
+								movie.getTitle(),
+								mapTagsToQueryResult(movie.getTags())
+						)
+				)
+				.toList();
+	}
+
+	@Override
+	public Optional<MovieQueryResult> findMovieQueryResult(final MovieId movieId, final UserId userId) {
 		return movies.values().stream()
+				.filter(movie -> movie.getMovieId().equals(movieId) && movie.getUserId().equals(userId))
+				.findFirst()
+				.map(movie -> new MovieQueryResult(
+						movie.getMovieId(),
+						movie.getTitle(),
+						mapCommentsToQueryResult(movie.getComments()),
+						mapTagsToQueryResult(movie.getTags())
+				));
+	}
+
+	private static Set<MovieCommentQueryResult> mapCommentsToQueryResult(final Set<MovieComment> comments) {
+		return comments.stream().map(comment -> new MovieCommentQueryResult(
+				comment.getCommentId(), comment.getText())).collect(Collectors.toSet());
+	}
+
+
+	private static Set<MovieTagQueryResult> mapTagsToQueryResult(final Set<MovieTag> tags) {
+		return tags.stream().map(movieTag -> new MovieTagQueryResult(
+				movieTag.getTagId(), movieTag.getLabel(), movieTag.getUserId())).collect(Collectors.toSet());
+	}
+
+	@Override
+	public Optional<MovieTagQueryResult> getTagByTagId(final MovieTagId tagId) {
+		return tags.values().stream()
+				.filter(tag -> tag.getTagId().equals(tagId))
+				.findFirst()
+				.map(movieTag -> new MovieTagQueryResult(movieTag.getTagId(), movieTag.getLabel(), movieTag.getUserId()));
+	}
+
+	@Override
+	public List<MovieInListQueryResult> getMoviesByTags(final List<MovieTagId> tags, final UserId userId) {
+		final List<Movie> foundMovies = movies.values().stream()
 				.filter(movie -> tags.stream().allMatch(tag ->
 						movie.getTags().stream().anyMatch(movieTag -> tag.equals(movieTag.getTagId()))
 				))
 				.filter(movie -> movie.getUserId().equals(userId))
 				.collect(Collectors.toList());
+		return toDto(foundMovies);
 	}
 
-
 	@Override
-	public List<MovieTag> findByUserId(final Integer userId) {
-		return tags.values().stream()
+	public List<MovieTagQueryResult> getMovieTagsByUserId(final Integer userId) {
+		final List<MovieTag> foundTags = tags.values().stream()
 				.filter(movieTag -> movieTag.getUserId().equals(new UserId(userId)))
-				.collect(Collectors.toList());
+				.toList();
+		return foundTags.stream().map(tag -> new MovieTagQueryResult(tag.getTagId(), tag.getLabel(), tag.getUserId())).toList();
 	}
 
-	@Override
-	public Optional<MovieTag> findTagByTagId(final String tagId) {
-		return Optional.ofNullable(tags.get(new MovieTagId(UUID.fromString(tagId))));
-	}
+	//	@Override
+//	public List<Movie> findAll(final UserId userId) {
+//		return movies.values().stream()
+//				.filter(movie -> movie.getUserId().equals(userId))
+//				.collect(Collectors.toList());
+//	}
+
+	//	@Override
+//	public List<Movie> findAllMoviesByTagIds(final List<MovieTagId> tags, final UserId userId) {
+//		return movies.values().stream()
+//				.filter(movie -> tags.stream().allMatch(tag ->
+//						movie.getTags().stream().anyMatch(movieTag -> tag.equals(movieTag.getTagId()))
+//				))
+//				.filter(movie -> movie.getUserId().equals(userId))
+//				.collect(Collectors.toList());
+//	}
+
+
+//	@Override
+//	public List<MovieTag> findByUserId(final Integer userId) {
+//		return tags.values().stream()
+//				.filter(movieTag -> movieTag.getUserId().equals(new UserId(userId)))
+//				.collect(Collectors.toList());
+//	}
 
 }
